Prevent line wrapping for test case table

--- a/dthm4kaiako/static/scss/bitfit.scss
+++ b/dthm4kaiako/static/scss/bitfit.scss
@@ -2,6 +2,10 @@
 
 // New styles
 
+#test-case-table {
+    white-space: nowrap;
+}
+
 .error {
     color: #b80000;
     font-weight: bold;
